<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/time_left" />

        <ImageView
            android:id="@+id/iv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_weight="1"
            android:src="@drawable/blank" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_colour"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.75"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="@color/guess_blue"
        android:text="@string/guess_purple"
        android:background="@drawable/border"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:id="@+id/bn_choice1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:textSize="32sp"
            android:text="@string/guess_orange" />

        <Button
            android:id="@+id/bn_choice2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="4dp"
            android:text="@string/guess_purple" />
    </LinearLayout>
</LinearLayout>
